# rdmapp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  taskfile.yaml  xmake.lua
cmake/: args  deps.cmake
examples/: async_rpc.cc  cancellation.cc  connector.cc  helloworld.cc  helloworld_handler.cc  helloworld_pybind11.cc  latency.cc  latency_raw.cc  qp_acceptor.cc  qp_connector.cc  qp_transmission.cc  rpc.cc  send_bw.cc  send_bw_raw.cc  write_bw.cc
examples/include/: acceptor.h  connector.h  coro_rpc.hpp  future.hpp  helloworld_handler.hpp  listener.h  qp_acceptor.h  qp_connector.h  qp_transmission.h  task.hpp
examples/include/socket/: channel.h  event_loop.h  tcp_connection.h  tcp_listener.h
examples/pybind11/: helloworld.cc  helloworld.py
examples/socket/: channel.cc  event_loop.cc  listener.cc  tcp_listener.cc
include/rdmapp/: completion_token.h  cq.h  cq_poller.h  device.h  error.h  executor.h  log.h  mr.h  pd.h  qp.h  rdmapp.h  scheduler.h  srq.h
include/rdmapp/detail/: blocking_queue.h  debug.h  logger.h  noncopyable.h  serdes.h
src/: basic_scheduler.cc  cq.cc  cq_poller.cc  device.cc  executor.cc  logger.cc  mr.cc  pd.cc  qp.cc  srq.cc
